@@ -1,4 +1,4 @@
-.TH SMP_REP_BROADCAST "8" "June 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_REP_BROADCAST "8" "February 2017" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_rep_broadcast \- invoke REPORT BROADCAST SMP function
 .SH SYNOPSIS
@@ -83,7 +83,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2011 Douglas Gilbert
+Copyright \(co 2011\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
